fixed tooltip overflow

--- a/src/components/UI/Tooltips/CoTextWithTooltip/coTextWithTooltip.module.scss
+++ b/src/components/UI/Tooltips/CoTextWithTooltip/coTextWithTooltip.module.scss
@@ -4,4 +4,5 @@
   text-overflow: ellipsis;
   max-width: 100%;
   white-space: nowrap;
+  width: fit-content;
 }
